[gd_scene load_steps=4 format=3 uid="uid://8ouavoemep8l"]

[ext_resource type="Script" path="res://dot.gd" id="1_m62dt"]
[ext_resource type="PackedScene" uid="uid://xq7de1nt1uhl" path="res://label.tscn" id="2_rvraj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y2yr2"]
radius = 30.0

[node name="Dot" type="Node2D"]
script = ExtResource("1_m62dt")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-1, -30, 15, -26, 25, -17, 30, -5, 29, 10, 21, 20, 10, 28, -3, 30, -17, 24, -27, 15, -30, -2, -25, -17, -14, -26)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_y2yr2")

[node name="Label" parent="." instance=ExtResource("2_rvraj")]
z_index = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
